# Evaluation-Pipeline

./: .env.example  .gitignore  AGENTS.md  README.md  lite_llm_metrics.ipynb  pyproject.toml  summary.md
evalpipeline.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/: __init__.py
src/core/: __init__.py  dataset_builder.py  endpoint_runner.py  env_loader.py  experiment_runner.py  judger.py  langfuse_client.py  langfuse_mcp.py  litellm_cost_builder.py  litellm_ingestion.py  litellm_store.py  metrics_analytics.py  openreward_runner.py  prompt_coach_agent.py  prompt_optimizer_agent.py  prompt_registry.py  run_history.py  web_search.py
src/frontend/: __init__.py  prompt_coach_widget.py  streamlit_app.py
src/frontend/pages/: dataset_builder.py  experiment_studio.py  judge_explorer.py  litellm_cost_builder.py  prompt_analytics.py  run_history.py  tool_judge.py
src/schemas/: __init__.py  dataset_builder.py  endpoint_runner.py  evaluation_dataset.py  experiment_runner.py  litellm_cost_builder.py  litellm_ingestion.py  metrics_analytics.py  openreward_runner.py  prompt_coach.py
tests/: test_dataset_builder.py  test_endpoint_runner.py  test_env_loader.py  test_experiment_runner.py  test_experiment_studio_page.py  test_judger.py  test_langfuse_client.py  test_litellm_cost_builder.py  test_metrics_analytics.py  test_openreward_runner.py  test_prompt_coach.py  test_run_history_page.py
